# SeaLantern

./: AI_GUIDE.md  README.md  SETTINGS_VERIFICATION.md  UPDATE_GUIDE.md  package-lock.json  package.json  updater.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: settings.rs
src-tauri/src/services/: global.rs  mod.rs  server_manager.rs  settings_manager.rs
src/api/: update.ts
src/components/layout/: AppSidebar.vue
src/data/: contributors.ts
src/utils/: version.ts
src/views/: AboutView.vue  ConsoleView.vue  CreateServerView.vue
